--- a/my-blog-backend/package.json
+++ b/my-blog-backend/package.json
@@ -6,6 +6,7 @@
     "type": "module",
     "scripts": {
         "start": "node src/server.js",
+        "build": "npm i",
         "dev": "nodemon src/server.js"
     },
     "keywords": [],
